# it-ai-assistant

./: README.md
.github/workflows/: assistant_backend_build.yml  assistant_backend_test.yml  assistant_commons.yml  assistant_commons_build.yml  content_management_backend_build.yml  content_management_build.yml  content_management_frontend_build.yml  content_management_test.yml  docker-image.yml  docker_image.yml  docker_image_reusable.yml  node.js.yml  python_reusable.yml
ai-assistant-commons/: pyproject.toml
assistant-backend/: README.md  assistant_backend.py  pyproject.toml
assistant_backend/: Dockerfile  pyproject.toml
assistant_backend/assistant_backend/: main.py
assistant_backend/tests/: test_main.py
assistant_commons/: .flake8  pyproject.toml
assistant_commons/assistant_commons/: example_lib.py
assistant_commons/tests/: test_example_lib.py
content-managment-backend/: README.md  pyproject.toml
content_management_backend/: Dockerfile  pyproject.toml
content_management_backend/content_management_backend/: main.py
content_management_backend/tests/: test_main.py
content_management_frontend/: README.md  package-lock.json  package.json
teams-bot/: README.md
