[tool.poetry]
name = "assistant-backend"
version = "0.1.0"
description = "AI assistant backend service"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[virtualenvs]
create = true
in-project = true

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
assistant-commons = {path = "../assistant_commons", develop = true}

[tool.poetry.scripts]
start = "assistant_backend.main:start"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
