[tool.poetry]
name = "assistant-commons"
version = "0.1.0"
description = "A shared library for AI assistant"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "assistant_commons"}]

[virtualenvs]
create = true
in-project = true

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

