[tool.poetry]
name = "content-management-backend"
version = "0.1.0"
description = "AI assistant content management backend service"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"
ai-assistant-commons = {path = "../ai-assistant-commons", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
